[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hub2lab"
version = "1.0.0"
description = "Copy a Github public repository to a Gitlab self-hosted project"
authors = ["RobinWoods"]
license = "MIT"
packages = [{include = "hub2lab"}]

[tool.poetry.dependencies]
python = "^3.8"
GitPython = "*"
rich = "*"
python-dotenv = "*"
requests = "2.32.4"
typer = "^0.16.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.0.0"
pytest-mock = ">=3.10.0"

[tool.poetry.scripts]
hub2lab = "hub2lab.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
